--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
-  text-align: center;
+min-height: 100vh; 
+background-color: rgb(226, 225, 225); 
+display: flex;  
+flex-direction: column;
+align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-item {
+box-sizing: border-box;
+ width: 350px; 
+ background-color: white; 
+ display: flex; 
+ flex-direction: column;
+ align-items: center;
+ padding-top: 50px;
+ padding-bottom: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.products-list { 
+ box-sizing: border-box;
+ width: 70%;  
+ margin: auto;
+ display: flex;
+ justify-content: center;
+ flex-wrap: wrap;
+ gap: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ 
+img {
+border-radius: 10px;    
 }
